Handle tab drag area bounds correctly for refresh.

Pre-refresh, during dragging, tabs could slide anywhere in the strip (from
tab left = 0 to tab right = tabstrip width).  In refresh, tabs should not drag
over the frame grab width or a LEADING or TRAILING new tab button.

This also prevents strange visual artifacts in TRAILING mode that currently
happen because a tab can be dragged past the point where it's supposed to be
allowed to remain visible.  With the updated code, tabs can't be dragged this
far, so the artifacts can't occur.

Along the way, I moved the Finch feature for the new tab button position into
the one function that uses it, because while trying to test locally by
commenting out parts of that function, I kept getting "unusued variable"
warnings.

Bug: 852936
Test: On Mac with refresh enabled, dragging a tab to the right edge of the strip should not result in flickering/disappearing tabs.
Change-Id: Idef63702d5c3161a38e1662feec8373239334c0d
Reviewed-on: https://chromium-review.googlesource.com/1114299
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570810}
Former-commit-id: 46c63393ecad428f9c52e7d35f968fccc73aa42c